# minimal_android_vulkan

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  TODO.md  android_target.py  build_app.py  start_emulator.py
app/: AndroidManifest.xml  BUILD.bazel  DexPlaceholder.java
app/cpp/: vulkan_main.cpp
rules/android/: BUILD.bazel  adb.bzl  apk.bzl  binary.bzl  emulator.bzl  extensions.bzl  sdk_toolchain.bzl
rules/android/overlays/emulator/: BUILD.root.tpl
rules/android/overlays/ndk/: BUILD.root.tpl
rules/android/overlays/ndk_toolchains/: BUILD.bazel  BUILD.toolchain.tpl
rules/android/overlays/sdk/: BUILD.root.tpl
rules/android/overlays/sdk_toolchains/: BUILD.bazel  BUILD.root.tpl  sdk_tool_toolchain.bzl
rules/android/overlays/system_image/: BUILD.root.tpl
rules/android/platform/: BUILD.bazel
rules/android/private/: BUILD.bazel  adb_impl.bzl  adb_runner.py.tpl  android_emulator_repo.bzl  android_ndk_repo.bzl  android_ndk_toolchains_repo.bzl  android_sdk_repo.bzl  android_sdk_toolchains_repo.bzl  android_system_image_repo.bzl  apk_impl.bzl  apk_runner.py.tpl  classes.dex  debug.keystore  emulator_impl.bzl  emulator_runner.py.tpl  extract.bzl  flags.bzl  google_repo.bzl  host_os.bzl  licenses.bzl  runner_common.bzl  triplets.bzl
shaders/: BUILD.bazel  triangle.vert
toolchains/glslc/: BUILD.bazel  defs.bzl
toolchains/jdk/: BUILD.bazel  jdk_repo.bzl
tools/android/: BUILD.bazel  emulator_tool.py  runfiles_paths.py  target_tool.py
