module(
    name = "vulkan_android_app",
    version = "1.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_java", version = "9.6.1")

java_repository = use_extension("@rules_java//java:extensions.bzl", "java_repository")
java_repository.remote(
    name = "remote_jdk",
    strip_prefix = "jdk-21.0.10+7",
    target_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    urls = ["https://aka.ms/download-jdk/microsoft-jdk-21-windows-x64.zip"],
    version = "21",
)
use_repo(
    java_repository,
    "remote_jdk",
    "remote_jdk_toolchain_config_repo",
)

# Registered before any other toolchain so they win resolution over
# rules_java's auto-registered failing local_jdk.
register_toolchains(
    "//:remote_jdk_runtime",
    "//:remote_jdk_bootstrap_runtime",
)

register_toolchains("@remote_jdk_toolchain_config_repo//:all")

register_toolchains("//toolchains/glslc:glslc_windows_toolchain")

android = use_extension("//rules/android:extensions.bzl", "android")
android.configure(
    build_tools = "36.1.0",
    cmdline_tools = "latest",
    min_api = "24",
    ndk = "29.0.14206865",
    platform_tools = "latest",
    platform_version = "36",
)
use_repo(
    android,
    "android_ndk",
    "android_ndk_toolchains",
    "android_sdk",
    "android_sdk_toolchains",
)

register_toolchains(
    "@android_sdk_toolchains//:sdk_toolchain",
    "@android_ndk_toolchains//:all",
)
