load("@rules_cc//cc:defs.bzl", "cc_library")
load("//rules/android:apk.bzl", "android_apk")
load("//rules/android:emulator.bzl", "android_emulator")

cc_library(
    name = "vulkan_lib",
    srcs = ["cpp/vulkan_main.cpp"],
    deps = ["@android_ndk//:native_app_glue"],
    linkopts = [
        "-u",
        "ANativeActivity_onCreate",
        "-lvulkan",
        "-landroid",
        "-llog",
        "-ldl",
    ],
    alwayslink = True,
    copts = ["-std=c++17"],
    visibility = ["//app:__pkg__"],
)

android_emulator(
    name = "emulator",
    visibility = ["//visibility:public"],
)

android_apk(
    name = "vulkan_triangle",
    manifest = "AndroidManifest.xml",
    custom_package = "com.example.vulkantriangle",
    deps = [":vulkan_lib"],
    assets = [
        "//shaders:vert_spv",
        "//shaders:frag_spv",
    ],
    assets_dir = "",
    default_emulator = ":emulator",
    visibility = ["//visibility:public"],
)
