load(":defs.bzl", "glslc_toolchain")

toolchain_type(
    name       = "toolchain_type",
    visibility = ["//visibility:public"],
)

glslc_toolchain(
    name  = "glslc_windows",
    glslc = "//thirdparty:android_sdk/ndk/29.0.14206865/shader-tools/windows-x86_64/glslc.exe",
    visibility = ["//visibility:private"],
)

toolchain(
    name           = "glslc_windows_toolchain",
    toolchain      = ":glslc_windows",
    toolchain_type = ":toolchain_type",
    exec_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)
