"""Developer tools for interacting with an Android device / emulator.

`bazel run //tools/android:simulator -- start`   # boot the AVD detached
`bazel run //tools/android:target   -- list`    # list connected devices
`bazel run //tools/android:target   -- run <path/to/app.apk>`
`bazel run //tools/android:target   -- log [adb logcat args...]`

Tool paths are resolved through the Bazel toolchain graph: adb / aapt2 /
avdmanager come from `@android_sdk`, emulator.exe from `@android_emulator`,
the system-image tree from `@android_system_image`, and java.exe from
`@remote_jdk`. Nothing is read from `thirdparty/` or a system install.
"""

load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "simulator",
    srcs = [
        "emulator_tool.py",
        "runfiles_paths.py",
    ],
    args = [
        "--emulator=$(rlocationpath @android_emulator//:emulator)",
        "--adb=$(rlocationpath @android_sdk//:adb)",
        "--avdmanager=$(rlocationpath @android_sdk//:avdmanager)",
        "--java=$(rlocationpath @remote_jdk//:bin/java.exe)",
        "--system-image-root-marker=$(rlocationpath @android_system_image//:package_marker)",
        "--system-image=system-images;android-36;google_apis;x86_64",
    ],
    data = [
        "@android_emulator//:emulator",
        "@android_emulator//:emulator_runtime",
        "@android_sdk//:adb",
        "@android_sdk//:avdmanager",
        "@android_sdk//:cmdline_tools_runtime",
        "@android_sdk//:platform_tools_runtime",
        "@android_system_image//:package_marker",
        "@android_system_image//:system_image_runtime",
        "@remote_jdk//:bin/java.exe",
        "@remote_jdk//:jdk",
    ],
    imports = ["."],
    main = "emulator_tool.py",
    visibility = ["//visibility:public"],
    deps = ["@rules_python//python/runfiles"],
)

py_binary(
    name = "target",
    srcs = [
        "runfiles_paths.py",
        "target_tool.py",
    ],
    args = [
        "--adb=$(rlocationpath @android_sdk//:adb)",
        "--aapt2=$(rlocationpath @android_sdk//:aapt2)",
    ],
    data = [
        "@android_sdk//:aapt2",
        "@android_sdk//:adb",
        "@android_sdk//:platform_tools_runtime",
    ],
    imports = ["."],
    main = "target_tool.py",
    visibility = ["//visibility:public"],
    deps = ["@rules_python//python/runfiles"],
)
